✨ feat: variables scss and mixins

--- a/src/scss/_material-person-theme.scss
+++ b/src/scss/_material-person-theme.scss
@@ -261,7 +261,7 @@ $altTheme: mat-dark-theme($theme-primary, $theme-accent, $theme-warn);
 }
 
 .mat-button-toggle-checked {
-  background-color: #b90000;
+  background-color: #760303;
   color: #ffb3b3 !important;
 }
 .mat-autocomplete-panel.mat-autocomplete-visible {
