✨ feat: buy and rent route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
     [routerLink]="'/'"
   />
   <div>
-    <button mat-button>Buy</button>
-    <button mat-button>To Rent</button>
+    <button mat-button [routerLink]="'/buy'">Buy</button>
+    <button mat-button [routerLink]="'/rent'">To Rent</button>
     <button mat-button [routerLink]="'/sell'">Sell</button>
   </div>
 </header>
