--- a/src/app/domain/sell/pages/sell-page/sell.page.scss
+++ b/src/app/domain/sell/pages/sell-page/sell.page.scss
@@ -1,3 +1,38 @@
+@import "colors";
+@import "variables";
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 60px;
+
+  h1 {
+    font-size: 24px;
+    font-weight: $bold;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+
+    mat-form-field {
+      width: 100%;
+    }
+  }
+}
+input[type="file"] {
+  display: none;
+}
+.file-upload {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+
+  button {
+    margin-left: 15px;
+  }
 }
