--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,9 @@
     [routerLink]="'/'"
   />
   <div>
-    <button mat-button [routerLink]="'/buy'">Buy</button>
+    <button mat-button [routerLink]="'/sale'">Buy</button>
     <button mat-button [routerLink]="'/rent'">To Rent</button>
     <button mat-button [routerLink]="'/sell'">Sell</button>
   </div>
 </header>
-
 <router-outlet></router-outlet>
